[Mac] Fix for find bar text issue

|-resetFieldEditorFrameIfNeeded| only draws if the frame has changed.
Ensure that the find bar gets redrawn, even when the frame stays the same.

BUG=647078

Review-Url: https://codereview.chromium.org/2479883003
Cr-Commit-Position: refs/heads/master@{#430384}